@@ -26,6 +26,8 @@ enum {
   STREAM_PITCH,
   STREAM_POS,
   STREAM_UPDATE,
+
+  STREAM_VIEW_INFO,
   STREAM_EDIT_LOOP_POINTS,
   STREAM_VIEW_TAGS,
 
